--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -50,11 +50,13 @@
             %span.vote_points{ style:"margin-right:5px;" } pts
         - if feed.context == :submission
           %div.social_toolbar
+            - u=root_url
+            - a=u+"#{submission_drilldown_path(post["submitted_answer_id"])}"
             = link_to "#", onclick: sharing_popup_javascript(:facebook, challenge_url(@path.permalink)) do
               = image_tag SHARE_FACEBOOK, alt: "Share on Facebook"
-            = link_to "#", onclick: sharing_popup_javascript(:twitter, submission_drilldown_path(post["submitted_answer_id"]), title) do
+            = link_to "#", onclick: sharing_popup_javascript(:twitter, "#{a.to_s}", title) do
               = image_tag SHARE_TWITTER, alt: "Share on Twitter"
-            = link_to "#", onclick: sharing_popup_javascript(:google_plus, challenge_url(@path.permalink), title) do
+            = link_to "#", onclick: sharing_popup_javascript(:google_plus, "#{a.to_s}", title) do
               = image_tag SHARE_GOOGLE, alt: "Share on Google+"
       
     %div.posttext.leveltext.dropdown{ style: "#{'background-color: rgb(195, 225, 247)' if post["answer_type"] == Task::CHECKIN}" }
