--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -7,9 +7,10 @@
   %div.leftstuff
     %div.displayin.floatl
       %a.comment{ style: "position: relative; top: 5px;", onclick: "open_comments(this);" } #{comments.size}  Comments
-    = render "shared/sharing", { custom_style: "display: inline; margin-left: 10px; float: left;", title: sharing_title, url: sharing_url }
-    - if @feed.context == :submission
+    - if feed.context == :submission
       = link_to "Go back to challenge", challenge_path(@path.permalink), class: "button button-info button-small"
+    - else
+      = render "shared/sharing", { custom_style: "display: inline; margin-left: 10px; float: left;", title: sharing_title, url: sharing_url }
   %div.comments{ style: "text-align: left; display: none;" }
     - if comments.empty?
       %p.no_comments There are no comments for this yet. 
