Cache fixes and other fun things.

--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -3,10 +3,13 @@
   %div{ style: "float:left;" }
     :javascript
       $(".comment_delete").on("ajax:success", function(){ $(this).parents("li").slideUp(); });
-    = link_to (image_tag user.picture, class: "commentphoto"), profile_path(user.username)
+    %a{ href: profile_path(user.username) }
+      %img.commentphoto{ src: user.picture }
   %div{ style: "overflow:hidden; margin: 0 0 0 43px;" }
     %pre.unstyled.text_content{ style: "font-size: 13px; color: black; margin-left: 0;" }= comment.content
     %p{ style: "margin-left: 0;" } 
-      #{link_to user.name, profile_path(user.username)} about #{time_ago_in_words(comment.created_at)} ago.
-      #{link_to "Remove.", comment, class: 'comment_delete', :method => :delete, remote: true if user.id == current_user.id}
+      %a{ href: profile_path(user.username) }= user.name
+      about #{time_ago_in_words(comment.created_at)} ago.
+      - if current_user and user.id == current_user.id
+        = link_to "Remove.", comment, class: 'comment_delete', :method => :delete, remote: true
       
