--- a/app/views/shared/_sharing.html.haml
+++ b/app/views/shared/_sharing.html.haml
@@ -1,9 +1,9 @@
 - title ||= "Challenge yourself on MetaBright!"
 - url ||= request.url
 %div.social_toolbar{ style: custom_style }
-  = link_to "#", onclick: sharing_popup_javascript(:facebook, url) do
-    = image_tag SHARE_FACEBOOK, alt: "Share on Facebook"
-  = link_to "#", onclick: sharing_popup_javascript(:twitter, url, title) do
-    = image_tag SHARE_TWITTER, alt: "Share on Twitter"
-  = link_to "#", onclick: sharing_popup_javascript(:google_plus, url, title) do
-    = image_tag SHARE_GOOGLE, alt: "Share on Google+"
+  %a{ onclick: sharing_popup_javascript(:facebook, url) }
+    %img{ src: SHARE_FACEBOOK, alt: "Share on Facebook" }
+  %a{ onclick: sharing_popup_javascript(:twitter, url, title) }
+    %img{ src: SHARE_TWITTER, alt: "Share on Twitter" }
+  %a{ onclick: sharing_popup_javascript(:google_plus, url, title) }
+    %img{ src: SHARE_GOOGLE, alt: "Share on Google+" }
