--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -50,8 +50,10 @@
             %span.vote_points{ style:"margin-right:5px;" } pts
         - if feed.context == :submission
           %div.social_toolbar
-            - u=root_url
-            - a=u+"#{submission_drilldown_path(post["submitted_answer_id"])}"
+            - u = root_url
+            - a = u + "#{submission_drilldown_path(post["submitted_answer_id"])}"
+            = link_to "http://www.reddit.com/submit", onclick: "window.location = 'http://www.reddit.com/submit?url=' + encodeURIComponent(window.location); return false", target: "_blank" do
+              = image_tag SHARE_REDDIT, alt:"Share on Reddit", border:"0", style: "margin-right: 4px; "
             = link_to "#", onclick: sharing_popup_javascript(:facebook, challenge_url(@path.permalink)) do
               = image_tag SHARE_FACEBOOK, alt: "Share on Facebook"
             = link_to "#", onclick: sharing_popup_javascript(:twitter, "#{a.to_s}", title) do
@@ -94,8 +96,8 @@
               %code.content{ style: "word-break:normal;" }= post["submitted_answer_content"]
           - elsif post["submitted_answer_content"]
             .preview
-              %div.sliderbar1
-                - unless feed.context == :submission
+              - unless feed.context == :submission
+                %div.sliderbar1                
                   %span
                     = link_to "View Full", submission_drilldown_path(post["submitted_answer_id"]), style: "color: #404040;"
               %code.content{ style: "word-break:normal;" }= post["submitted_answer_content"]
