--- a/app/views/paths/submission.html.haml
+++ b/app/views/paths/submission.html.haml
@@ -12,11 +12,11 @@
   .postphotospace { diplay: none; }
   .votingandpointsarea { margin-top: -2px;  }
   .votingandpointsarea .vote_points { font-size: 18px; }
-  .votingandpointsarea .container { display: block; }
+  .votingandpointsarea > div {margin-left: 10px; }
   .votingandpointsarea div { top: 0px; }
   .posttext code { font-size: 14px; }
   .CRarea iframe { min-height: 0 !important; height: 350px !important; }
-  .social_toolbar { display: block !important; margin-top: 6px !important; right: -8px; }
+  .social_toolbar { display: block !important; margin: 6px 0 0 0 !important; right: 2px;  }
   .social_toolbar a { padding: 0; }
   .leftstuff { height: 34px; }
   .leftstuff .button-info { margin: 1px 9px; color: white; }
