--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -61,18 +61,6 @@
       
     %div.posttext.leveltext.dropdown{ style: "#{'background-color: rgb(195, 225, 247)' if post["answer_type"] == Task::CHECKIN}" }
       %code.dropdown-toggle{ "data-toggle" => "dropdown", role: "button"} #{post["question"]}
-      - if @enable_administration
-        %ul.dropdown-menu{ role: "menu", style: "left:99.5%; top:-70%; min-width:152px;"}
-          %li
-            %div
-              %div.sidenub
-            %div{ style: "padding: 3px 0px;"}
-              %ul.profile_dropdown{ style: "list-style: none; margin: 0 2px 0 4px;"}
-                %li.CR_dropdown_option
-                  - if post["promoted_at"].nil?
-                    = link_to "Add to Hall of Fame", admin_update_submission_path(post["submitted_answer_id"], mark: "promoted"), method: :put
-                  - else
-                    = link_to "In the Hall of Fame", "#"
     
     %div#cr_pop.CRarea
       - if post["answer_type"] == Task::CREATIVE.to_s
@@ -80,6 +68,13 @@
           - if post["submitted_answer_content"] && post["submitted_answer_content"].downcase.include?("<html>")
             .preview
               %div.sliderbar1
+                - if @enable_administration
+                  %span
+                    - if post["promoted_at"].nil?
+                      = link_to "Add to Hall of Fame", admin_update_submission_path(post["submitted_answer_id"], mark: "promoted"), method: :put, style: "color: #404040;"
+                    - else
+                      = link_to "In the Hall of Fame", "#"
+                |
                 %span.reload{ style: "color: #404040; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('iframe').attr('src', $(this).parents('.CRarea').find('iframe').attr('src'));" } Reload
                 |
                 %span.view_raw{ style: "color: #404040; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('.preview').hide(); $(this).parents('.CRarea').find('.raw').show();" } View Raw
