--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -64,32 +64,33 @@
     
     %div#cr_pop.CRarea
       - if post["answer_type"] == Task::CREATIVE.to_s
-        - if post["answer_sub_type"] == Task::TEXT.to_s
+        .preview
+          %div.sliderbar1
+            - unless feed.context == :submission 
+              %span
+                = link_to "View Full", submission_drilldown_path(post["submitted_answer_id"]), style: "color: #404040;"
+            - if post["submitted_answer_content"] && post["submitted_answer_content"].downcase.include?("<html>")
+              - unless feed.context == :submission 
+                |  
+              %span.view_raw{ style: "color: #404040; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('.preview').hide(); $(this).parents('.CRarea').find('.raw').show();" } View Raw
+              | 
+              %span.reload{ style: "color: #404040; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('iframe').attr('src', $(this).parents('.CRarea').find('iframe').attr('src'));" } Reload
+            - if @enable_administration
+              |
+              %span
+                - if post["promoted_at"].nil?
+                  = link_to "Add to Hall of Fame", admin_update_submission_path(post["submitted_answer_id"], mark: "promoted"), method: :put, style: "color: #404040;"
+                - else
+                  = link_to "In the Hall of Fame", "#"
           - if post["submitted_answer_content"] && post["submitted_answer_content"].downcase.include?("<html>")
-            .preview
-              %div.sliderbar1
-                - if @enable_administration
-                  %span
-                    - if post["promoted_at"].nil?
-                      = link_to "Add to Hall of Fame", admin_update_submission_path(post["submitted_answer_id"], mark: "promoted"), method: :put, style: "color: #404040;"
-                    - else
-                      = link_to "In the Hall of Fame", "#"
-                |
-                %span.reload{ style: "color: #404040; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('iframe').attr('src', $(this).parents('.CRarea').find('iframe').attr('src'));" } Reload
-                |
-                %span.view_raw{ style: "color: #404040; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('.preview').hide(); $(this).parents('.CRarea').find('.raw').show();" } View Raw
-                - unless feed.context == :submission
-                  |                
-                  %span
-                    = link_to "View Full", submission_drilldown_path(post["submitted_answer_id"]), style: "color: #404040;"
-              %iframe{ src: raw_path(post["submitted_answer_id"]), style: "min-height: 150px; width: 100%; border: 0; z-index: 1;" }
-            .raw.hide
-              %div.sliderbar2
-                %span.view_preview{ style: "color: #404040; padding-right: 5px; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('.raw').hide(); $(this).parents('.CRarea').find('.preview').show();"} View Preview
-              %code.content{ style: "word-break:normal;" }= post["submitted_answer_content"]
+            %iframe{ src: raw_path(post["submitted_answer_id"]), style: "min-height: 150px; width: 100%; border: 0; z-index: 1;" }
           - else
             %code.content{ style: "word-break:normal;" }= post["submitted_answer_content"]
-
+        - if post["answer_sub_type"] == Task::TEXT.to_s
+          .raw.hide
+            %div.sliderbar2
+              %span.view_preview{ style: "color: #404040; padding-right: 5px; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('.raw').hide(); $(this).parents('.CRarea').find('.preview').show();"} View Preview
+            %code.content{ style: "word-break:normal;" }= post["submitted_answer_content"]
         - elsif post["answer_sub_type"] == Task::IMAGE.to_s
           = image_tag(sanitize(post["image_url"]))
       
