Fixing launchpad and turning off profiler for now.

--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -91,6 +91,30 @@
                       %div.points{style:"margin-right:4px;"}= t.points_awarded.to_i.to_s + " points"
                     - else
                       = link_to "Incomplete", take_section_path(@current_section, task_id: t.id), class: "label label-important"
+  :javascript
+    var display_type = #{@display_type || 0};
+    var open_tab;
+    if(display_type == 0){ open_tab = "#questions_tab_link"; } 
+    if(display_type == 2){ open_tab = "#arena_tab_link"; } 
+    if(display_type == 3){ open_tab = "#achievement_tab_link"; }
+    
+    $(".tab_content").hide();
+    $("ul.nav-tabs li.active").removeClass("active");
+    $(open_tab).parent().addClass("active");
+    $("#"+$(open_tab).attr("data-tab")).show().addClass("active_tab");
+
+    $(".nav-tabs li a").click(function(){
+      $(".tab_content").hide();
+      $("ul.nav-tabs li.active").removeClass("active");
+      $(this).parent().addClass("active");
+      $(".active_tab").removeClass("active_tab");
+      var $open_tab = $("#"+$(this).attr("data-tab"));
+      $open_tab.addClass("active_tab");
+      $open_tab.find(".task_view").show();
+      $open_tab.find(".editor_view").hide();
+      $open_tab.show();
+    });
+  
   - if @enrollment.contribution_unlocked?
     :javascript
       function log_error(error){
@@ -106,31 +130,8 @@
         }
       })
   
-      var display_type = #{@display_type || 0};
-      var open_tab;
       var task_subtypes = #{Task::SUBTYPES.to_json};
       var template = #{@path.template.to_json};
-  
-      if(display_type == 0){ open_tab = "#questions_tab_link"; } 
-      if(display_type == 2){ open_tab = "#arena_tab_link"; } 
-      if(display_type == 3){ open_tab = "#achievement_tab_link"; }
-  
-      $(".tab_content").hide();
-      $("ul.nav-tabs li.active").removeClass("active");
-      $(open_tab).parent().addClass("active");
-      $("#"+$(open_tab).attr("data-tab")).show().addClass("active_tab");
-  
-      $(".nav-tabs li a").click(function(){
-        $(".tab_content").hide();
-        $("ul.nav-tabs li.active").removeClass("active");
-        $(this).parent().addClass("active");
-        $(".active_tab").removeClass("active_tab");
-        var $open_tab = $("#"+$(this).attr("data-tab"));
-        $open_tab.addClass("active_tab");
-        $open_tab.find(".task_view").show();
-        $open_tab.find(".editor_view").hide();
-        $open_tab.show();
-      });
   
       $("#editor_link").click(function(){
         $(".active_tab").find(".task_view").hide();
