--- a/app/views/mailer/visit_alert.html.haml
+++ b/app/views/mailer/visit_alert.html.haml
@@ -6,31 +6,28 @@
 - other_visits = 0
 - @visits.each do |visit|
   - visitor = visit.user
-  - if visitor.nil?
-    - other_visits = other_visits + 1
-    - next
   %table{ cellpadding: "0", style: "margin-top: 14px; display: inline-block; width: 294px; "}
     %tbody
       %tr{ valign: "top"}
-        %td{ style: ""}
-          %a{ href: profile_url(visitor.username), target:"_blank"}
-            %img{ style: "border-radius: 3px; -moz-border-radius: 3px; -webkit-border-radius: 3px; height: 70px; width: 70px;", src: visitor.picture}
-        %td{ style: "padding: 0 0 10px 5px; font-size: 12px;"}
-          %a{ href: profile_url(visitor.username), target:"_blank", style:"text-decoration: none;  text-transform: uppercase; font-weight: bold;"}
-            %span #{visitor.name}
-          %br
-          - paths = visitor.enrollments.to_a.collect{ |e| e.path.name}
-          - paths = paths.first(3).join(", ")
-          %span= paths
-- if other_visits > 0
-  %p
-    = other_visits + " other "
-    - if other_visits == 1
-      person 
-    - else
-      people 
-    also visited your profile.
-      
+        - if visitor.nil?
+          %td{ style: ""}
+            %a
+              %img{ style: "border-radius: 3px; -moz-border-radius: 3px; -webkit-border-radius: 3px; height: 70px; width: 70px;", src: ICON_DEFAULT_PROFILE }
+          %td
+            %a{ style:"text-decoration: none;  text-transform: uppercase; font-weight: bold;" }
+              %span Anonymous
+        - else
+          %td{ style: ""}
+            %a{ href: profile_url(visitor.username), target:"_blank"}
+              %img{ style: "border-radius: 3px; -moz-border-radius: 3px; -webkit-border-radius: 3px; height: 70px; width: 70px;", src: visitor.picture}
+          %td{ style: "padding: 0 0 10px 5px; font-size: 12px;"}
+            %a{ href: profile_url(visitor.username), target:"_blank", style:"text-decoration: none;  text-transform: uppercase; font-weight: bold;"}
+              %span #{visitor.name}
+            %br
+            - paths = visitor.enrollments.to_a.collect{ |e| e.path.name}
+            - paths = paths.first(3).join(", ")
+            %span= paths
+                  
 %p{ style: "font-size:12px;"} 
   Thanks,
   %br
